# LLM-notes

./: .gitignore  AGENTS.md  README.md
AI-Coding-Skills/: README.md
AI-Coding-Skills/gstack/: README.md  install.md
AI-Coding-Skills/superpowers/: README.md  install.md
Anthropic/: README.md
Anthropic/python/: README.md
Conda/: miniforge-vs-miniconda.md
GGUF/: README.md
Google/: .env.example  README.md  chat.py  chat_live.py  chat_live_audio.py  gemini_agent.py  main.py
Google/utils/: audio_utils.py
Hermes/: README.md  hermes-vs-openclaw.md
Hermes/concepts/: gateway-and-agent-loop.md  memory-system.md  session-management.md
LLM-Chat-Memory/: LLM_chat_memory.md  README.md  render_template_toml.py  requirements.txt  template.toml
Langfuse/: README.md  architecture-deep-dive.md  docker-network-security.md
LiteLLM/: README.md  async_chat.py  chat.py  response_handlers.py
LiteLLM/chat-memory/: .gitignore  README.md  chat_memory.py
Ollama/: README.md
OpenClaw/: README.md  built-in-agents.md  docker-network-binding.md  openclaw-agents.md  openclaw-tools-guide.md  sandbox-architecture.md  setup.md
SDD/: README.md
SDD/example/: .gitignore  README.md  pyproject.toml
SDD/example/app/: main.py
SDD/example/spec/: url_shortener.md
SDD/example/tests/: test_main.py
TensorRT-LLM/: README.md  chat.py  installation.md
Transformer/: attention_mask.md
Triton Inference Server/: README.md  tensorrtllm_backend.md
ai-metadata-docs/: README.md  agents.md  rules.md  skill.md  workflow.md
llama-cpp/: README.md
vLLM/: README.md  chat.py
(+26 files in other folders)
